1. 修改框架函数命名，使用看起来更符合http协议处理的框架 2. 增加http协议路由分发，http api处理的过程制定。

--- a/src/framework/CMakeLists.txt
+++ b/src/framework/CMakeLists.txt
@@ -1,8 +1,7 @@
 
+add_subdirectory(fastapi)
+#add_subdirectory(logicsvr)
 
-add_subdirectory(fastcgi)
-add_subdirectory(logicsvr)
-add_subdirectory(utils)
 
 
 
