--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,42 +6,14 @@ cmake_minimum_required (VERSION 3.0)
 project (PCCL)
 
 
-#################################################### 
-## project 
-## 
-####################################################
-
-
-
-set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty")
-
-
-
-
 ####################################################
 ## third library
 ## 
 ####################################################
 
-#find_package(Protobuf "3.5.1")
-#find_package(Openssl)
 
-#FIND_PACKAGE(CURL)
-#IF(CURL_FOUND)
-#    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
-#    #TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
-#ELSE(CURL_FOUND)
-#    MESSAGE(FATAL_ERROR "CURL library not found")
-#ENDIF(CURL_FOUND)
-
-
-
-
-
-####################################################
-## binary
-## 
-####################################################
+include("${PROJECT_SOURCE_DIR}/cmake/Common.cmake")
+include("${PROJECT_SOURCE_DIR}/cmake/Thirdparty.cmake")
 
 
 ####################################################
@@ -50,8 +22,6 @@ set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty")
 ####################################################
 
 add_subdirectory(src)
-
-#add_subdirectory(thirdparty)
 
 
 
