--- a/src/framework/logicsvr/CMakeLists.txt
+++ b/src/framework/logicsvr/CMakeLists.txt
@@ -1,20 +1,21 @@
 
 
 
-
-execute_process(WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" COMMAND  protoc  Packet.proto --cpp_out=./)
-message(STATUS "protoc protobuf file: ${CMAKE_CURRENT_SOURCE_DIR} ...")
-
 ### compile
-file(GLOB_RECURSE  GLOBAL_SOURCES "*.cpp" "*.cc" "*.h" )
+file(GLOB_RECURSE  GLOBAL_SOURCES "*.cpp" "*.h" )
 
-add_library(pccl_logicsvr STATIC ${GLOBAL_SOURCES})
+add_library(pccl_logicsvr STATIC ${GLOBAL_SOURCES} )
 
-include_directories("./include" "${CMAKE_SOURCE_DIR}/pccl"  "${CMAKE_SOURCE_DIR}/third/jsoncpp-1.9.2/include/json" "${CMAKE_SOURCE_DIR}/third/random/include" "${FMT_DIR}")
+include_directories("." 
+					"../common"
+					)
 
 
-target_link_libraries(pccl_logicsvr pccl_utils ${FMT_LIBRARY} ${jsoncpp_LIBRARIES}  ${Protobuf_LIBRARIES} ${TARS_LIBRARIES}  )
-
+target_link_libraries(	pccl_logicsvr 
+						#${jsoncpp_LIBRARIES} 
+						#${TARS_LIBRARIES} 
+						pthread  
+						)
 
 
 
