增加example：UserApi模块： 用户注册，用户登录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,6 @@ include("${PROJECT_SOURCE_DIR}/cmake/Thirdparty.cmake")
 ####################################################
 
 add_subdirectory(src)
-
-
+add_subdirectory(example)
 
 
