增加第三库【thirdparty】的编译

--- a/src/framework/fastapi/CMakeLists.txt
+++ b/src/framework/fastapi/CMakeLists.txt
@@ -9,9 +9,9 @@ include_directories("."
 
 
 target_link_libraries(	pccl_fastapi 
-						${LIB_JSONCPP} 						
-						${LIB_FMT}
-						${LIB_TARS_CPP} 
+						${JSONCPP_LIBRARY} 						
+						${FMT_LIBRARY}
+						${TARSCPP_LIBRARY} 
 						pthread
 						)
 
